<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main_color"
    tools:context="com.inscode.shadowpreviewer.MainActivity">

    <RelativeLayout
        android:id="@+id/preview_area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/preview_area_height"
        android:background="@android:color/white">
        <TextView
            android:id="@+id/preview_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="@dimen/preview_text_default_text_size"
            android:text="@string/default_preview_text"/>
        <Button
            android:id="@+id/btn_input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_input_text"/>
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/settings_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adView"
        android:orientation="horizontal"
        android:layout_below="@id/preview_area">
        
        <ScrollView
            android:layout_width="@dimen/settings_tab_area_width"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">
            <com.inscode.shadowpreviewer.ui.TabContainer
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/settings_single_value_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible">
                <TextView
                    android:id="@+id/value_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/value_text">
                    <Button
                        android:id="@+id/btn_value_subtract"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:minWidth="10dp"
                        android:minHeight="10dp"
                        android:text="@string/text_icon_subtract"/>
                    <SeekBar
                        android:id="@+id/seek_bar_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/btn_value_subtract"
                        android:layout_toLeftOf="@id/btn_value_plus"
                        android:layout_centerVertical="true"/>
                    <Button
                        android:id="@+id/btn_value_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:minWidth="10dp"
                        android:minHeight="10dp"
                        android:text="@string/text_icon_plus"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/settings_color_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="invisible">
                <RelativeLayout
                    android:id="@+id/r_color_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/text_r"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_red_light"
                        android:text="@string/color_R"/>
                    <SeekBar
                        android:id="@+id/seek_bar_r"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/text_r"
                        android:layout_toLeftOf="@id/text_r_value"
                        android:layout_centerVertical="true"
                        android:thumbTint="@android:color/holo_red_light"/>
                    <TextView
                        android:id="@+id/text_r_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/g_color_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/r_color_area">
                    <TextView
                        android:id="@+id/text_g"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_green_light"
                        android:text="@string/color_G"/>
                    <SeekBar
                        android:id="@+id/seek_bar_g"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/text_g"
                        android:layout_toLeftOf="@id/text_g_value"
                        android:layout_centerVertical="true"
                        android:thumbTint="@android:color/holo_green_light"/>
                    <TextView
                        android:id="@+id/text_g_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/b_color_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/g_color_area">
                    <TextView
                        android:id="@+id/text_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_blue_light"
                        android:text="@string/color_B"/>
                    <SeekBar
                        android:id="@+id/seek_bar_b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/text_b"
                        android:layout_toLeftOf="@id/text_b_value"
                        android:layout_centerVertical="true"
                        android:thumbTint="@android:color/holo_blue_light"/>
                    <TextView
                        android:id="@+id/text_b_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@color/background_ad_view"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-4943010947847600/5183249975">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
